# onnx-structure-lens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SAMPLE_REPORT.html  SAMPLE_REPORT.json  SAMPLE_REPORT.md
examples/: tiny_transformer_block.json
src/structure_lens/: __init__.py  analyzer.py  cli.py  impact.py  ir.py  loader.py  render.py  shapes.py  subgroups.py  topology.py
tests/: test_analysis.py
